samples/_failures_safe/1761002445_f84dbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ce08a1b.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_6ce08a1b.c:155:9: error: expected declaration or statement at end of input
  155 |         default: printf("UNKNOWN"); break;
      |         ^~~~~~~
./samples/SAFE/__tmp_6ce08a1b.c:155:9: error: expected declaration or statement at end of input
